# renderer

./: .$Framwork-log.drawio.dtmp  .gitignore  CMakeLists.txt  Framwork-log.drawio  ReadMe.md
src/: CDriverOpenGL.cpp  CDriverOpenGL.h  CGameObject.h  CRoot.cpp  CRoot.h  CSceneManager.cpp  CSceneManager.h  CShaderOpenGL.cpp  CShaderOpenGL.h  Camera.h  GameObject.cpp  GameObject.h  ICamera.h  IDriver.h  IGameObject.h  IRoot.cpp  IRoot.h  ISceneManager.h  IShader.h  LycMath.h  Model.cpp  Model.h  SceneManager.cpp  SceneManager.h  main.cpp
